[gd_scene load_steps=13 format=3 uid="uid://e2xpynkgr2ch"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_0l0l2"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_yonn4"]
[ext_resource type="Script" path="res://Main/Components/Notepad/PasswordPage.gd" id="3_8iqdl"]
[ext_resource type="Texture2D" uid="uid://cm0bb6x8f05w3" path="res://Assets/Textures/ui/point2.png" id="4_r58sn"]
[ext_resource type="Texture2D" uid="uid://bo5afx7dwx2a8" path="res://Assets/Textures/ui/point4.png" id="5_bd843"]
[ext_resource type="Texture2D" uid="uid://bs0du80gxdubl" path="res://Assets/Textures/ui/app.png" id="6_2nbxp"]
[ext_resource type="Script" path="res://Main/Components/Notepad/KeyBoard.gd" id="7_37e5b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v50uh"]
texture = ExtResource("6_2nbxp")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="Animation" id="Animation_dtiv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.501961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 220)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("KeyBoard:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h11k2"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.501961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("KeyBoard:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 340, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.5)
}

[sub_resource type="Animation" id="Animation_tfr8v"]
resource_name = "wrong_password"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 220), Vector2(-5, 220), Vector2(5, 220), Vector2(-5, 220), Vector2(5, 220), Vector2(0, 220)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2eeb"]
_data = {
"RESET": SubResource("Animation_dtiv6"),
"open": SubResource("Animation_h11k2"),
"wrong_password": SubResource("Animation_tfr8v")
}

[node name="PasswordPage" type="Control"]
material = ExtResource("1_0l0l2")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_yonn4")
script = ExtResource("3_8iqdl")
fill_texture = ExtResource("4_r58sn")
empty_texture = ExtResource("5_bd843")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 220.0
offset_right = 304.0
offset_bottom = 300.0

[node name="PasswordPanel" type="Control" parent="CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(160, 80)
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/PasswordPanel"]
clip_children = 2
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="CenterContainer/PasswordPanel/Panel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PasswordPanel/Panel"]
use_parent_material = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -1

[node name="AcceptButton" type="Button" parent="CenterContainer/PasswordPanel/Panel/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatLineButton"
disabled = true
text = "Accept"

[node name="CancelButton" type="Button" parent="CenterContainer/PasswordPanel/Panel/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatLineButton"
text = "Cancel"

[node name="State" type="Label" parent="CenterContainer/PasswordPanel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -28.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enter the Password."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordPoints" type="CenterContainer" parent="CenterContainer/PasswordPanel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PasswordPanel/PasswordPoints"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PasswordPanel/PasswordPoints/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_r58sn")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/PasswordPanel/PasswordPoints/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_r58sn")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/PasswordPanel/PasswordPoints/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_r58sn")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="CenterContainer/PasswordPanel/PasswordPoints/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_r58sn")
expand_mode = 3
stretch_mode = 5

[node name="Panel2" type="Panel" parent="CenterContainer/PasswordPanel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v50uh")
metadata/_edit_lock_ = true

[node name="CenterContainer2" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 2
offset_top = 305.0
offset_right = 304.0
offset_bottom = 323.0

[node name="HintLabel" type="Label" parent="CenterContainer2"]
use_parent_material = true
layout_mode = 2
text = "Hint: Her Birthday"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyBoard" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
offset_top = 540.0
offset_right = 304.0
offset_bottom = 700.0
script = ExtResource("7_37e5b")

[node name="Panel" type="Panel" parent="KeyBoard"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="KeyBoard"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="KeyBoard/CenterContainer"]
use_parent_material = true
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="KeyBoard/CenterContainer/VBoxContainer"]
modulate = Color(0.85, 0.85, 0.85, 1)
use_parent_material = true
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4"]
use_parent_material = true
layout_mode = 2

[node name="1" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "1"

[node name="2" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "2"

[node name="3" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "3"

[node name="4" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "4"

[node name="5" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "5"

[node name="6" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "6"

[node name="7" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "7"

[node name="8" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "8"

[node name="9" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "9"

[node name="0" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="KeyBoard/CenterContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer"]
use_parent_material = true
layout_mode = 2

[node name="Q" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "Q"

[node name="W" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "W"

[node name="E" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "E"

[node name="R" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "R"

[node name="T" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "T"

[node name="Y" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "Y"

[node name="U" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "U"

[node name="I" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "I"

[node name="O" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "O"

[node name="P" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "P"

[node name="CenterContainer2" type="CenterContainer" parent="KeyBoard/CenterContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2"]
use_parent_material = true
layout_mode = 2

[node name="A" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "A"

[node name="S" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "S"

[node name="D" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "D"

[node name="F" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "F"

[node name="G" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "G"

[node name="H" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "H"

[node name="J" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "J"

[node name="K" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "K"

[node name="L" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "L"

[node name="CenterContainer3" type="CenterContainer" parent="KeyBoard/CenterContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3"]
use_parent_material = true
layout_mode = 2

[node name="Null" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
modulate = Color(0.85, 0.85, 0.85, 1)
use_parent_material = true
custom_minimum_size = Vector2(35, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"

[node name="Control" type="Control" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="Z" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "Z"

[node name="X" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "X"

[node name="C" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "C"

[node name="V" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "V"

[node name="B" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "B"

[node name="N" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "N"

[node name="M" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(25, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "M"

[node name="Control2" type="Control" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="DeleteButton" type="Button" parent="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
modulate = Color(0.85, 0.85, 0.85, 1)
use_parent_material = true
custom_minimum_size = Vector2(35, 32)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"SmallButton"
text = "Del"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p2eeb")
}

[connection signal="pressed" from="CenterContainer/PasswordPanel/Panel/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="KeyBoard/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/DeleteButton" to="KeyBoard" method="_on_delete_button_pressed"]
